# socket_byCpp

./: README.md
socket_client/: CMakeLists.txt  main.cpp
socket_client/includes/: TCPClient.h
socket_client/source/: TCPClient.cpp
socket_server/: CMakeLists.txt  main.cpp
socket_server/include/: TCPServer.h
socket_server/source/: TCPServer.cpp
